--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>OutSider | About Me</title>
+        <title>Blog Design by Pizza Han</title>
         <meta name="description" content="HTML5 Personal Blog Magazine Style Template">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Your Name">
@@ -22,7 +22,7 @@
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-        <link rel="icon" type="image/png" href="favicon.png">
+        <link rel="icon" type="img/png" href="img/favicon_32x32.jpg">
 
         <script src="js/vendor/modernizr.js"></script>
 
@@ -45,7 +45,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">OutSider</a>
+                    <a class="navbar-brand" href="index.html"><img src="img/logo4.png"></a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -53,17 +53,6 @@
                         <li role="menuitem"><a href="index.html">Home</a></li>
                         <li role="menuitem"><a href="about.html">About Me</a></li>
                         <li role="menuitem"><a href="contact.html">Contact</a></li>
-                        <li class="dropdown" role="menuitem">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Pages <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li role="menuitem"><a href="post-leftsidebar.html">Left Sidebar</a></li>
-                                <li role="menuitem"><a href="post-rightsidebar.html">Right Sidebar</a></li>
-                                <li role="menuitem"><a href="post-centered.html">Centered Post</a></li>
-                                <li role="menuitem"><a href="404.html">Page 404</a></li>
-                                <li role="menuitem"><a href="comingsoon.html">Coming Soon</a></li>
-                                <li role="menuitem"><a href="shortcodes.html">Shortcodes</a></li>
-                            </ul>
-                        </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -122,7 +111,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <figure class="shadowed">
-                            <img src="img/placeholder-big.jpg" alt="img" />
+                            <img src="img/IMAG1470_1.jpg" alt="img" />
                         </figure>
                     </div>
                     <div class="col-md-8 col-md-offset-2">
@@ -149,7 +138,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-md-6">
-                        <p>&copy; 2015 OutSider Theme, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by <a href="http://filiponline.tk/" target="_blank">Filip</a></p>
+                         <p>&copy; 2016 Blog Design, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by <a href="http://filiponline.tk/" target="_blank">Pizza Han</a></p>
                     </div>
                     <div class="col-xs-12 col-md-6">
                         <ul class="social-list">
