--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>OutSider | Contact</title>
+        <title>Blog Design by Pizza Han</title>
         <meta name="description" content="HTML5 Personal Blog Magazine Style Template">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Your Name">
@@ -22,7 +22,7 @@
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-        <link rel="icon" type="image/png" href="favicon.png">
+        <link rel="icon" type="img/png" href="img/favicon_32x32.jpg">
 
         <script src="js/vendor/modernizr.js"></script>
 
@@ -45,7 +45,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">OutSider</a>
+                    <a class="navbar-brand" href="index.html"><img src="img/logo4.png"></a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -53,17 +53,6 @@
                         <li role="menuitem"><a href="index.html">Home</a></li>
                         <li role="menuitem"><a href="about.html">About Me</a></li>
                         <li role="menuitem"><a href="contact.html">Contact</a></li>
-                        <li class="dropdown" role="menuitem">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Pages <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li role="menuitem"><a href="post-leftsidebar.html">Left Sidebar</a></li>
-                                <li role="menuitem"><a href="post-rightsidebar.html">Right Sidebar</a></li>
-                                <li role="menuitem"><a href="post-centered.html">Centered Post</a></li>
-                                <li role="menuitem"><a href="404.html">Page 404</a></li>
-                                <li role="menuitem"><a href="comingsoon.html">Coming Soon</a></li>
-                                <li role="menuitem"><a href="shortcodes.html">Shortcodes</a></li>
-                            </ul>
-                        </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -111,8 +100,8 @@
                     <div class="col-md-12">
                         <h1 class="page-title">Contact</h1>
                         <address class="address">
-                            795 Folsom Ave, San Francisco, CA 94107<br>
-                            <a href="mailto:#">first.last@example.com</a>
+                            47 Vu Trong Phung, Thanh Xuan, Ha Noi<br>
+                            <a href="mailto:#">dinhvanhan123@gmail.com</a>
                         </address>
                     </div>
                 </div>
@@ -124,7 +113,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div id="mymap" class="mymap"></div><!-- Google Map -->
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.8796466870167!2d105.80750131536759!3d20.997460994221072!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ac9719beecc3%3A0xd06c9649f409a701!2zNDcgVsWpIFRy4buNbmcgUGjhu6VuZywgVGhhbmggWHXDom4gVHJ1bmcsIFRoYW5oIFh1w6JuLCBIw6AgTuG7mWksIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1465835097363" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe><!-- Google Map -->
                     </div>
                 </div>
                 <div class="row">
@@ -173,7 +162,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-md-6">
-                        <p>&copy; 2015 OutSider Theme, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by <a href="http://filiponline.tk/" target="_blank">Filip</a></p>
+                         <p>&copy; 2016 Blog Design, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by <a href="http://filiponline.tk/" target="_blank">Pizza Han</a></p>                    
                     </div>
                     <div class="col-xs-12 col-md-6">
                         <ul class="social-list">
