--- a/10-cong-cu-moi-giup-kham-pha-tiem-nang-sang-tao.html
+++ b/10-cong-cu-moi-giup-kham-pha-tiem-nang-sang-tao.html
@@ -6,6 +6,7 @@
         <meta name="description" content="HTML5 Personal Blog Magazine Style Template">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Your Name">
+        <meta property="fb:admins" content="1065230676902544"/>
 
         <!-- FONTS -->
         <link rel="stylesheet" href="css/font-awesome.min.css">
