--- a/cac-nha-ux-ui-design-thuong-lam-nhung-gi.html
+++ b/cac-nha-ux-ui-design-thuong-lam-nhung-gi.html
@@ -5,7 +5,8 @@
         <title>Blog Design by Pizza Han</title>
         <meta name="description" content="HTML5 Personal Blog Magazine Style Template">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="Your Name">
+        <meta name="author" content="PizzaHan.top">
+        <meta property="fb:admins" content="1065230676902544"/>
 
         <!-- FONTS -->
         <link rel="stylesheet" href="css/font-awesome.min.css">
