--- a/10-cong-cu-moi-giup-kham-pha-tiem-nang-sang-tao.html
+++ b/10-cong-cu-moi-giup-kham-pha-tiem-nang-sang-tao.html
@@ -196,7 +196,10 @@
 
                         <!-- Comments -->
                         <article>
-                            <div class="fb-comments" data-href="http://pizzahan.top/10-cong-cu-moi-giup-kham-pha-tiem-nang-sang-tao.html" data-width="100%" data-numposts="10"></div>
+
+                            <div class="fb-comment-embed"
+                               data-href="https://www.facebook.com/zuck/posts/10102735452532991?comment_id=1065230676902544"
+                               data-width="100%"></div>
                         </article>
                         <!-- And comment -->
                     </div>
@@ -245,9 +248,7 @@
              fjs.parentNode.insertBefore(js, fjs);
            }(document, 'script', 'facebook-jssdk'));
         </script>
-        
-        <!-- Scripts
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!--–––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/bootstrap.min.js"></script>
