--- a/10-cong-cu-moi-giup-kham-pha-tiem-nang-sang-tao.html
+++ b/10-cong-cu-moi-giup-kham-pha-tiem-nang-sang-tao.html
@@ -197,9 +197,11 @@
                         <!-- Comments -->
                         <article>
 
-                            <div class="fb-comment-embed"
+                            <div class="fb-comment"
                                data-href="https://www.facebook.com/zuck/posts/10102735452532991?comment_id=1065230676902544"
-                               data-width="100%"></div>
+                               data-width="100%">
+
+                            </div>
                         </article>
                         <!-- And comment -->
                     </div>
