--- a/10-cong-cu-moi-giup-kham-pha-tiem-nang-sang-tao.html
+++ b/10-cong-cu-moi-giup-kham-pha-tiem-nang-sang-tao.html
@@ -197,11 +197,7 @@
                         <!-- Comments -->
                         <article>
 
-                            <div class="fb-comment"
-                               data-href="https://www.facebook.com/zuck/posts/10102735452532991?comment_id=1065230676902544"
-                               data-width="100%">
-
-                            </div>
+                           <div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-numposts="5"></div>
                         </article>
                         <!-- And comment -->
                     </div>
@@ -232,24 +228,14 @@
             </div>
         </footer>
         
-        <div id="fb-root"></div>
-        <script>
-          window.fbAsyncInit = function() {
-            FB.init({
-              appId      : '1065230676902544',
-              xfbml      : true,
-              version    : 'v2.6'
-            });
-          };
-
-          (function(d, s, id){
-             var js, fjs = d.getElementsByTagName(s)[0];
-             if (d.getElementById(id)) {return;}
-             js = d.createElement(s); js.id = id;
-             js.src = "//connect.facebook.net/en_US/sdk.js";
-             fjs.parentNode.insertBefore(js, fjs);
-           }(document, 'script', 'facebook-jssdk'));
-        </script>
+      <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.6&appId=1065230676902544";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
   <!--–––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
