--- a/10-cong-cu-moi-giup-kham-pha-tiem-nang-sang-tao.html
+++ b/10-cong-cu-moi-giup-kham-pha-tiem-nang-sang-tao.html
@@ -196,8 +196,7 @@
 
                         <!-- Comments -->
                         <article>
-
-                           <div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-numposts="5"></div>
+                            <div class="fb-comments" data-href="http://pizzahan.top/10-cong-cu-moi-giup-kham-pha-tiem-nang-sang-tao.html" data-numposts="5"></div>
                         </article>
                         <!-- And comment -->
                     </div>
