--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="page-title">About Me</h1>
-                        <p>Not another blogger</p>
+                        <p>Blog Pizza Han</p>
                     </div>
                 </div>
             </div>
@@ -117,14 +117,41 @@
                     <div class="col-md-8 col-md-offset-2">
                         <!-- About -->
                         <article class="about">
-                            <h3 class="bold">I am cassual blogger</h3>
-                            <p>Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me!</p>
-                            <p>Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows. Some pilots get picked and become television programs. Some don't, become nothing. She starred in one of the ones that became nothing.</p>
-                        </article>
-                        <!-- Twitter Carousel -->
-                        <article class="twitter-carousel">
-                            <h4>Latest Tweets</h4>
-                            <div class="twitter-feed"></div><!-- Twitter Feed -->
+
+                            <h3 class="bold" style="text-align: center; margin-bottom: 50px">Hello, Chào các bạn !</h3>
+
+                            <h4>&#9679; Đôi lời giới thiệu về mình :))</h4>
+
+                            <p>- Tên đầy đủ mình là: Đinh Hữu Hân</p>
+
+                            <p>- Mình sinh năm 1993, hiện tại thì mình đang làm và sinh sống tại Hà Nội, mình đang làm Design tại <a href="http://dobodi.net/" target="__blank">DOBODY</a> mỘt startup rất thú vị hè hè... mời các bạn ghé thăm nhé.</p>
+
+                            <p>- Một chút tiểu sử bản thân mình bạn nào có đọc thì cũng đừng cười nhé hè hè... Văn vẻ của mình cũng hơi kém ah :))</p>
+
+                            <p>- Mình thì cũng đi làm được gần 2 năm rồi hè từ ngày ra trường tới giờ cũng rất may là không bị thất nghiệp kể ra thì số mình cũng đỏ kiểu có vài người bảo mình là có quý nhân phù trợ mình cũng cảm thấy thế thật hề hề... </p>
+                            <p>- Sau khi ra trường thì mình cũng có tu luyện thêm ba tháng may mắn thì cũng kiếm được việc làm luôn cũng là nhờ anh trai họ mình chỉ dậy ah hè hè ngày đầu chọn nghề học thì anh mình cũng là người hướng nghiệp mình vào học ngành thiết thế đồ họa lúc đấy thì mình cũng học thôi cũng chả có đam mê hay gì gì cả sinh viên thì các bạn biết rồi đấy có ma nào học hành đâu đa số là thế và không ngoại trừ mình hè hè... chỉ mải chơi chả học hành gì học lại thì cứ rập rập
+                            mình cũng chẳng thế ngờ được là thế ** nào mình lại xin được việc :(( kiểu như cái số ý hề hề... <br>
+                            - Sau này lúc kiếm được việc mới ngẫm các bạn ah thấy chán lắm đi làm chả biết cái gì không biết cái gì luôn lúc đó mới lai ra học rồi ngẫm thấy phí quãng thời gian đại học vô cùng ah hic... chỉ ước được quay lại để giờ không phải ngu ngơ như thế này.<br>
+                            - Thật may là không bị xa thải sớm nếu phải công ty khác thì trắc là bị lượn ngay rồi :)) Nhưng may là số mình nó không tệ thế hề anh xếp mình là người phỏng vấn tuyển mình vào đã không làm thế hè hè... lúc đấy mình cảm giác như đây là quý nhân của mình ah mà không đúng là quý nhân thật hề sau này đến tận bây giờ mọi thứ mình học được từ kiến thức, cách làm người đều bị ảnh hưởng bởi anh ý ah hề hề... 
+                            Đến bây giờ thì mấy anh em về cùng một nhà cùng sống, cùng ăn, cùng ngủ, cùng chiến đấu vì cùng một mục đích với cái gọi là <a href="http://dobodi.net/" target="__blank"> DOBODY </a> các bạn ah hề... mà thôi kể đến đây thôi nói nhiều thế chắc các bạn cũng cảm thấy ngán lắm rồi hề :))..
+                            </p>
+
+                            <h4 style="margin-top: 30px;">&#9679; Những thứ mà mình có thể làm được :))</h4>
+
+                            <p>- Phát triển web : HTML/CSS, UX/UI, Content development</p>
+                            <p>- Xây dựng thương hiệu: Logo, Name Card, Catalog, Brochure...</p>
+                            <P>- Công cụ mà mình biết sài: Icomom, Sublime Text, Eclipse, Bootstrap, Photoshop, Illustrator, Gitlab, Git Hub</P>
+
+                            <h4 style="margin-top: 30px;">&#9679; Sở thích của mình</h4>
+                            <p>- Thích lang thang một mình uống trà đá ngắm phố phường đùa đấy cơ bản là ngắm gái nhiều hơn phố phường :)), thích đi du lịch, selfie, bla bla... ah đặc biết là thích kiếm nhiều tiền cái này trắc là bạn nào cũng thích :))</p>
+
+                            <h4 style="margin-top: 30px;">&#9679; Về Blog của mình</h4>
+                            <P>Từ lâu thì mình cũng muốn có một trang web mà ở đó mình muốn chia sẽ những kiến thức mà mình đã học được trong quá trình làm việc của mình cho mọi người biết nó có thể giúp ích phần nào đó cho các bạn những bài viết thì đa số mình lấy ở trên mạng và mình thấy là nó cũng ok cho các bạn.</P>
+                            <p>Thôi đêm cũng khuya rồi mình viết đoạn này là 2h sáng mỏi rã rời hic mình xin cáo từ.</p>
+                            <p>Bạn nào muốn làm quen hay có nhu cầu thì liên hệ mình nhé :)))))</p>
+                            <p><strong>Pizza Hân</strong></p>
+                            <p>Di động: 096 900 24 31</p>
+                            <p>Email: dinhvanhan123@gmail.com hoặc dinhvanhan.designer.ohm@gmail.com</p>
                         </article>
                     </div>
                 </div>
