--- a/landing-page-ohm.html
+++ b/landing-page-ohm.html
@@ -120,7 +120,7 @@
                                 <p>Chào các bạn !</p>
                                 <p>Đây là những sản phẩm đầu tay của mình hề là công ty đầu tiên mình làm từ lúc ra trường giờ nhìn lại thấy cũng không tệ lắm nên share các bạn coi ah hề ! </p>
                                 <p>Hiện tại thì dự án này đã fail nên cũng không còn website để các bạn xem. Mình có đặt link ở ảnh các bạn click để xem chi tiết hơn nhé!</p>
-                                <p style="margin-bottom: 50px; border: 1px solid #f1f1f1"><img src="img/myproduct/OHG Landing Page.jpg"></p>
+                                <p style="margin-bottom: 50px; border: 1px solid #f1f1f1"><img src="img/myproduct/OHG-Landing-Page.jpg"></p>
                                 <p style=" border: 1px solid #f1f1f1"><img src="img/myproduct/1234.jpg"></p>
 
                             </section>
