--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <figure class="shadowed">
-                            <img src="img/IMAG1470_1.jpg" alt="img" />
+                            <img src="img/IMAG1470_1.jpg" alt="img" style="width: 100%;">
                         </figure>
                     </div>
                     <div class="col-md-8 col-md-offset-2">
