--- a/7-xu-huong-mau-sac-cho-thiet-ke-web-nam-2016.html
+++ b/7-xu-huong-mau-sac-cho-thiet-ke-web-nam-2016.html
@@ -55,36 +55,20 @@
                         <li role="menuitem"><a href="contact.html">Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="#share-popup" class="iconized open-popup-link" data-toggle="tooltip" data-placement="bottom" title="Share"><i class="icon icon-share"></i></a>
+                       <li>
+                            <a href="#share-popup" class="iconized open-popup-link" data-toggle="tooltip" data-placement="bottom" title="Social Network"><i class="fa fa-rss"></i></a>
                             <!-- Popup Content -->
                             <div id="share-popup" class="full-popup mfp-hide">
                                 <article class="share">
                                     <h3 class="snserif">Share this page</h3>
                                     <ul class="social-list">
-                                        <li><a href="#" class="fa fa-facebook"></a></li>
-                                        <li><a href="#" class="fa fa-twitter"></a></li>
-                                        <li><a href="#" class="fa fa-pinterest"></a></li>
-                                        <li><a href="#" class="fa fa-google-plus"></a></li>
-                                        <li><a href="#" class="fa fa-tumblr"></a></li>
-                                        <li><a href="#" class="fa fa-linkedin"></a></li>
+                                        <li><a href="https://www.facebook.com/DesignerWebdeveloper" target="_blank" class="fa fa-facebook"></a></li>
+                                        <li class="hidden"><a href="#" class="fa fa-twitter"></a></li>
+                                        <li class="hidden"><a href="#" class="fa fa-pinterest"></a></li>
+                                        <li><a href="https://plus.google.com/u/0/+H%C3%A2nLaviehanlavie/posts" target="_blank" class="fa fa-google-plus"></a></li>
+                                        <li class="hidden"><a href="#" class="fa fa-tumblr"></a></li>
+                                        <li class="hidden"><a href="#" class="fa fa-linkedin"></a></li>
                                     </ul>
-                                </article>
-                            </div>
-                        </li>
-                        <li>
-                            <a href="#search-popup" class="iconized open-popup-link" data-toggle="tooltip" data-placement="bottom" title="Search"><i class="icon icon-magnifier"></i></a>
-                            <!-- Popup Content -->
-                            <div id="search-popup" class="full-popup mfp-hide">
-                                <article class="search">
-                                    <div class="container">
-                                        <div class="row">
-                                            <h3 class="snserif">Search</h3>
-                                            <div class="input-group col-md-4 col-md-offset-4">
-                                                <input type="text" class="form-control" placeholder="Type and press enter to search" aria-describedby="basic-addon1">
-                                            </div>
-                                        </div>
-                                    </div>
                                 </article>
                             </div>
                         </li>
