--- a/13-dieu-nen-biet-ve-seo-nam-2016-cho-nha-thiet-ke-web.html
+++ b/13-dieu-nen-biet-ve-seo-nam-2016-cho-nha-thiet-ke-web.html
@@ -52,7 +52,6 @@
                     <ul class="nav navbar-nav" role="menubar">
                         <li role="menuitem"><a href="index.html">Home</a></li>
                         <li role="menuitem"><a href="about.html">About Me</a></li>
-                        <li role="menuitem"><a href="contact.html">Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -141,7 +140,7 @@
                                     <p>Một trong những yếu tố đóng vai trò quan trọng đó chính là website của bạn nên có sự linh hoạt để có thể thu nhỏ lại. Trang web của bạn cần hòa hợp tốt với nhiều mức độ phân giải và kích cỡ màn hình. Nó không chỉ bao gồm các thiết bị di động với nhiều kích cỡ màn hình và độ phân giải (Ipad, smartphone, etc.) mà cả màn hình desktop với kích cỡ và độ phân giải giao động từ “19?” đến “24+”. Khi website của bạn đáp ứng được những điều đó, nó sẽ có thể hoạt động tốt với tất cả những biến thể. </p>
                                     <h3>13. HTML5 và CSS3 (Validated)</h3>
                                     <p>HTML5 và CSS3 làm việc tốt với nhau, giúp cho website của bạn bóng bẩy hơn, rõ ràng và nhanh chóng. HTML5 đủ linh hoạt để thu nhỏ lại theo yêu cầu của các phương tiện truyền thông mới. HTML5 có những chức năng tiên tiến hơn so với HTML cũ. CSS3 tăng tốc độ tải trang và đem lại cho website của bạn cảm giác mới mẻ trong sự tương tác. Quy trình đánh giá là một trong những yếu tố bắt buộc của việc phát triển mã code tốt, cho dù một trang vẫn có thể làm việc tốt nếu không có nó. Tuy nhiên, một nhà thiết kế web nên trau chuốt kĩ càng số mã code thì HTML mới có thể được đánh giá chính xác. Quy trình đánh giá này cũng cần thiết đối với CSS. Nhìn chung, quy trình đánh giá nên được coi như là một thành phần thiết yếu trong sự phát triển mã code tốt.</p>
-
+                                    <p style="margin-top: 15px; font-style: italic; float: right;">Nguồn RGB</p>
 
 
                             </section>
@@ -169,18 +168,8 @@
         <footer class="footer" role="contentinfo">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p>&copy; 2015 OutSider Theme, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by <a href="http://filiponline.tk/" target="_blank">Filip</a></p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <ul class="social-list">
-                            <li><a href="#" class="fa fa-facebook"></a></li>
-                            <li><a href="#" class="fa fa-twitter"></a></li>
-                            <li><a href="#" class="fa fa-pinterest"></a></li>
-                            <li><a href="#" class="fa fa-flickr"></a></li>
-                            <li><a href="#" class="fa fa-dribbble"></a></li>
-                            <li><a href="#" class="fa fa-behance"></a></li>
-                        </ul>
+                    <div class="col-xs-12 col-md-12">
+                        <p>&copy; 2016 Blog Design, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by Pizza Han</p>
                     </div>
                 </div>
             </div>
