--- a/cac-nha-ux-ui-design-thuong-lam-nhung-gi.html
+++ b/cac-nha-ux-ui-design-thuong-lam-nhung-gi.html
@@ -53,7 +53,6 @@
                     <ul class="nav navbar-nav" role="menubar">
                         <li role="menuitem"><a href="index.html">Home</a></li>
                         <li role="menuitem"><a href="about.html">About Me</a></li>
-                        <li role="menuitem"><a href="contact.html">Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -144,7 +143,7 @@
                                 <p>Sự tiếp cận của tôi ngày càng được mở rộng qua nhiều năm dựa trên loại dự án tôi làm. Tôi luôn học được kĩ thuật mới để lưu vào bộ kĩ năng cần có của tôi.</p>
                                 <p>Các công cụ tốt hơn dần trở nên có sẵn, xuất hiện ngày càng nhiều nghiên cứu dựa trên các phương pháp tốt nhất và sự thay đổi về công nghệ – nhưng các khái niệm thì vẫn tương đồng với nhau. Hãy tạo ra một thiết kế hướng tới sự liên kết con người lại với nhau qua giao diện người dùng.</p>
 
-
+                                <p style="margin-top: 15px; font-style: italic; float: right;">Nguồn RGB</p>
 
 
                             </section>
@@ -172,18 +171,8 @@
         <footer class="footer" role="contentinfo">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p>&copy; 2015 OutSider Theme, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by <a href="http://filiponline.tk/" target="_blank">Filip</a></p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <ul class="social-list">
-                            <li><a href="#" class="fa fa-facebook"></a></li>
-                            <li><a href="#" class="fa fa-twitter"></a></li>
-                            <li><a href="#" class="fa fa-pinterest"></a></li>
-                            <li><a href="#" class="fa fa-flickr"></a></li>
-                            <li><a href="#" class="fa fa-dribbble"></a></li>
-                            <li><a href="#" class="fa fa-behance"></a></li>
-                        </ul>
+                    <div class="col-xs-12 col-md-12">
+                        <p>&copy; 2016 Blog Design, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by Pizza Han</p>
                     </div>
                 </div>
             </div>
