--- a/lam-the-nao-de-co-viec-lam-dau-tien-khi-vua-tot-nghiep.html
+++ b/lam-the-nao-de-co-viec-lam-dau-tien-khi-vua-tot-nghiep.html
@@ -52,7 +52,6 @@
                     <ul class="nav navbar-nav" role="menubar">
                         <li role="menuitem"><a href="index.html">Home</a></li>
                         <li role="menuitem"><a href="about.html">About Me</a></li>
-                        <li role="menuitem"><a href="contact.html">Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -145,7 +144,7 @@
                                 <p style="text-align: justify;">Cụm từ “Yêu cầu có kinh nghiệm” có thể làm lạc lối những ứng viên rụt rè trong công cuộc tìm việc, nhưng bạn sẽ không như thế. Bằng cách chủ động kiếm tìm nhiều cơ hội đa dạng để phát triển kĩ năng và kinh nghiệm trước khi ra trường, bạn sẽ có được cả kết quả học tập và kĩ năng thực tế để gây ấn tượng với nhà tuyển dụng và có được công việc chính thức đầu tiên.</p>
 
 
-
+                                <p style="margin-top: 15px; font-style: italic; float: right;">Nguồn RGB</p>
 
                             </section>
                             <ul class="tags-list">
@@ -172,18 +171,8 @@
         <footer class="footer" role="contentinfo">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p>&copy; 2015 OutSider Theme, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by <a href="http://filiponline.tk/" target="_blank">Filip</a></p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <ul class="social-list">
-                            <li><a href="#" class="fa fa-facebook"></a></li>
-                            <li><a href="#" class="fa fa-twitter"></a></li>
-                            <li><a href="#" class="fa fa-pinterest"></a></li>
-                            <li><a href="#" class="fa fa-flickr"></a></li>
-                            <li><a href="#" class="fa fa-dribbble"></a></li>
-                            <li><a href="#" class="fa fa-behance"></a></li>
-                        </ul>
+                    <div class="col-xs-12 col-md-12">
+                        <p>&copy; 2016 Blog Design, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by Pizza Han</p>
                     </div>
                 </div>
             </div>
