--- a/10-dieu-cac-agency-thiet-ke-va-design-nen-tu-hoi-khi-quang-cao-ban-than.html
+++ b/10-dieu-cac-agency-thiet-ke-va-design-nen-tu-hoi-khi-quang-cao-ban-than.html
@@ -52,7 +52,6 @@
                     <ul class="nav navbar-nav" role="menubar">
                         <li role="menuitem"><a href="index.html">Home</a></li>
                         <li role="menuitem"><a href="about.html">About Me</a></li>
-                        <li role="menuitem"><a href="contact.html">Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -105,7 +104,7 @@
  
 
 
-
+                            <p style="margin-top: 15px; font-style: italic; float: right;">Nguồn RGB</p>
 
                             </section>
                             <ul class="tags-list">
@@ -132,22 +131,13 @@
         <footer class="footer" role="contentinfo">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p>&copy; 2015 OutSider Theme, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by <a href="http://filiponline.tk/" target="_blank">Filip</a></p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <ul class="social-list">
-                            <li><a href="#" class="fa fa-facebook"></a></li>
-                            <li><a href="#" class="fa fa-twitter"></a></li>
-                            <li><a href="#" class="fa fa-pinterest"></a></li>
-                            <li><a href="#" class="fa fa-flickr"></a></li>
-                            <li><a href="#" class="fa fa-dribbble"></a></li>
-                            <li><a href="#" class="fa fa-behance"></a></li>
-                        </ul>
+                    <div class="col-xs-12 col-md-12">
+                        <p>&copy; 2016 Blog Design, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by Pizza Han</p>
                     </div>
                 </div>
             </div>
         </footer>
+        
         <div id="fb-root"></div>
         <script>(function(d, s, id) {
           var js, fjs = d.getElementsByTagName(s)[0];
