--- a/7-bi-kip-thiet-ke-thuyet-trinh-thu-hut-khach-hang.html
+++ b/7-bi-kip-thiet-ke-thuyet-trinh-thu-hut-khach-hang.html
@@ -52,7 +52,6 @@
                     <ul class="nav navbar-nav" role="menubar">
                         <li role="menuitem"><a href="index.html">Home</a></li>
                         <li role="menuitem"><a href="about.html">About Me</a></li>
-                        <li role="menuitem"><a href="contact.html">Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -136,7 +135,7 @@
                                 <h3> Kết luận </h3>
                                 <p>Thuyết trình chính xác là cái phần “nhỏ” giúp hoàn thiện hình ảnh công ty bạn trong mắt khách hàng và đối tác. Một phần thuyết trình tốt không chỉ là thiết kế slide đẹp mà còn là kết quả bạn đạt được sau đó – sự gia tăng số câu hỏi, lượt chia sẻ, các cuộc trò chuyện, cuộc gọi và những thứ khác. Và việc cập nhật logo, website và branding cũng rất quan trọng. Chúng tôi hy vọng 7 bí kíp vừa rồi sẽ giúp bạn cải thiện ngày càng tốt hơn.</p>
 
-
+                                <p style="margin-top: 15px; font-style: italic; float: right;">Nguồn RGB</p>
 
                             </section>
                             <ul class="tags-list">
@@ -163,22 +162,13 @@
         <footer class="footer" role="contentinfo">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p>&copy; 2015 OutSider Theme, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by <a href="http://filiponline.tk/" target="_blank">Filip</a></p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <ul class="social-list">
-                            <li><a href="#" class="fa fa-facebook"></a></li>
-                            <li><a href="#" class="fa fa-twitter"></a></li>
-                            <li><a href="#" class="fa fa-pinterest"></a></li>
-                            <li><a href="#" class="fa fa-flickr"></a></li>
-                            <li><a href="#" class="fa fa-dribbble"></a></li>
-                            <li><a href="#" class="fa fa-behance"></a></li>
-                        </ul>
+                    <div class="col-xs-12 col-md-12">
+                        <p>&copy; 2016 Blog Design, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by Pizza Han</p>
                     </div>
                 </div>
             </div>
         </footer>
+        
         <div id="fb-root"></div>
         <script>(function(d, s, id) {
           var js, fjs = d.getElementsByTagName(s)[0];
