--- a/su-dung-mau-sac-font-chu-va-khoang-cach-tao-sac-thai-trong-thiet-ke-cua-ban.html
+++ b/su-dung-mau-sac-font-chu-va-khoang-cach-tao-sac-thai-trong-thiet-ke-cua-ban.html
@@ -52,7 +52,6 @@
                     <ul class="nav navbar-nav" role="menubar">
                         <li role="menuitem"><a href="index.html">Home</a></li>
                         <li role="menuitem"><a href="about.html">About Me</a></li>
-                        <li role="menuitem"><a href="contact.html">Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                        <li>
@@ -207,7 +206,7 @@
                                 <p>Cảm xúc còn có thể điểu khiển cách người khác giao tiếp với thiết kế của bạn. Vậy chúng tôi hy vọng những kĩ thuật và ví dụ này có thể cho bạn vài ý tưởng để tích hợp săc thái vào những project của bạn và đạt hiệu quả giao tiếp cao hơn. Chúc bạn làm việc vui vẻ!</p>
 
 
-
+                                <p style="margin-top: 15px; font-style: italic; float: right;">Nguồn RGB</p>
                             </section>
                             <ul class="tags-list">
                                 <li><a href="#" class="btn btn-default btn-xs">Design</a></li>
@@ -233,18 +232,8 @@
         <footer class="footer" role="contentinfo">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p>&copy; 2015 OutSider Theme, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by <a href="http://filiponline.tk/" target="_blank">Filip</a></p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <ul class="social-list">
-                            <li><a href="#" class="fa fa-facebook"></a></li>
-                            <li><a href="#" class="fa fa-twitter"></a></li>
-                            <li><a href="#" class="fa fa-pinterest"></a></li>
-                            <li><a href="#" class="fa fa-flickr"></a></li>
-                            <li><a href="#" class="fa fa-dribbble"></a></li>
-                            <li><a href="#" class="fa fa-behance"></a></li>
-                        </ul>
+                    <div class="col-xs-12 col-md-12">
+                        <p>&copy; 2016 Blog Design, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by Pizza Han</p>
                     </div>
                 </div>
             </div>
