--- a/ty-le-vang-nhung-dieu-can-biet-ve-cach-su-dung.html
+++ b/ty-le-vang-nhung-dieu-can-biet-ve-cach-su-dung.html
@@ -52,7 +52,6 @@
                     <ul class="nav navbar-nav" role="menubar">
                         <li role="menuitem"><a href="index.html">Home</a></li>
                         <li role="menuitem"><a href="about.html">About Me</a></li>
-                        <li role="menuitem"><a href="contact.html">Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                        <li>
@@ -187,7 +186,7 @@
                                 <p>György Dóczi đã viết trong <i>The Power of Limits:</i> “ Sức mạnh của Tỉ lệ vàng trong việc tạo nên sự hài hòa bắt nguồn từ khả năng độc đáo của nó khi kết hợp các thành phần thành 1 thể, khiến cho mỗi chi tiết vẫn giữ được chất riêng mình nhưng hòa hợp được với tổng thể chung của tác phẩm.”</p>
 
 
-
+                                <p style="margin-top: 15px; font-style: italic; float: right;">Nguồn RGB</p>
 
 
                             </section>
@@ -215,18 +214,8 @@
         <footer class="footer" role="contentinfo">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p>&copy; 2015 OutSider Theme, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by <a href="http://filiponline.tk/" target="_blank">Filip</a></p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <ul class="social-list">
-                            <li><a href="#" class="fa fa-facebook"></a></li>
-                            <li><a href="#" class="fa fa-twitter"></a></li>
-                            <li><a href="#" class="fa fa-pinterest"></a></li>
-                            <li><a href="#" class="fa fa-flickr"></a></li>
-                            <li><a href="#" class="fa fa-dribbble"></a></li>
-                            <li><a href="#" class="fa fa-behance"></a></li>
-                        </ul>
+                    <div class="col-xs-12 col-md-12">
+                        <p>&copy; 2016 Blog Design, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by Pizza Han</p>
                     </div>
                 </div>
             </div>
