--- a/ung-dung-do-sg-do-toi-trong-thiet-ke.html
+++ b/ung-dung-do-sg-do-toi-trong-thiet-ke.html
@@ -52,7 +52,6 @@
                     <ul class="nav navbar-nav" role="menubar">
                         <li role="menuitem"><a href="index.html">Home</a></li>
                         <li role="menuitem"><a href="about.html">About Me</a></li>
-                        <li role="menuitem"><a href="contact.html">Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -205,7 +204,7 @@
                                 <p class="quote">Kết luận</p>
                                 <p>Chúng tôi hy vọng bạn đã có vài cảm hứng với việc áp dụng sắc độ sáng và sắc độ tối cho project của mình. Bạn có thể tham khảo các nguyên tắc phổi màu khác của <a href="http://rgb.vn/ideas/">RGB</a> tại <a title="HIỂU VỀ MÀU SẮC VÀ CÁCH PHỐI MÀU " href="http://rgb.vn/ideas/tuts-tips/hieu-ve-mau-sac-va-cach-phoi-mau">đây</a> nhé.</p>
 
-
+                                <p style="margin-top: 15px; font-style: italic; float: right;">Nguồn RGB</p>
 
                             </section>
                             <ul class="tags-list">
@@ -232,18 +231,8 @@
         <footer class="footer" role="contentinfo">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p>&copy; 2015 OutSider Theme, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by <a href="http://filiponline.tk/" target="_blank">Filip</a></p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <ul class="social-list">
-                            <li><a href="#" class="fa fa-facebook"></a></li>
-                            <li><a href="#" class="fa fa-twitter"></a></li>
-                            <li><a href="#" class="fa fa-pinterest"></a></li>
-                            <li><a href="#" class="fa fa-flickr"></a></li>
-                            <li><a href="#" class="fa fa-dribbble"></a></li>
-                            <li><a href="#" class="fa fa-behance"></a></li>
-                        </ul>
+                    <div class="col-xs-12 col-md-12">
+                        <p>&copy; 2016 Blog Design, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by Pizza Han</p>
                     </div>
                 </div>
             </div>
