--- a/uu-khuyet-diem-va-tuong-lai-cua-thiet-ke-phang.html
+++ b/uu-khuyet-diem-va-tuong-lai-cua-thiet-ke-phang.html
@@ -52,7 +52,6 @@
                     <ul class="nav navbar-nav" role="menubar">
                         <li role="menuitem"><a href="index.html">Home</a></li>
                         <li role="menuitem"><a href="about.html">About Me</a></li>
-                        <li role="menuitem"><a href="contact.html">Contact</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
@@ -179,6 +178,7 @@
                                 <p style="text-align: justify;"><a href="https://designschool.canva.com/blog/grid-design/" target="_blank">15 lý do vì sao bố cục grid sẽ giúp cải thiện thiết kế của bạn</a></p>
                                 <p style="text-align: justify;"><a href="https://designschool.canva.com/blog/swiss-design/">Thiết kế đồ hoạ vòng quanh thế giới: kiểu Thuỵ Sĩ</a></p>
                                 <p style="text-align: justify;"><a href="https://designschool.canva.com/blog/minimalist-design-beautiful-examples-and-practical-tips/">Thiết kế tối giản: 25 ví dụ đẹp và bí kíp thực tế</a></p>
+                                <p style="margin-top: 15px; font-style: italic; float: right;">Nguồn RGB</p>
                             </section>
                             <ul class="tags-list">
                                 <li><a href="#" class="btn btn-default btn-xs">Design</a></li>
@@ -204,18 +204,8 @@
         <footer class="footer" role="contentinfo">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p>&copy; 2015 OutSider Theme, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by <a href="http://filiponline.tk/" target="_blank">Filip</a></p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <ul class="social-list">
-                            <li><a href="#" class="fa fa-facebook"></a></li>
-                            <li><a href="#" class="fa fa-twitter"></a></li>
-                            <li><a href="#" class="fa fa-pinterest"></a></li>
-                            <li><a href="#" class="fa fa-flickr"></a></li>
-                            <li><a href="#" class="fa fa-dribbble"></a></li>
-                            <li><a href="#" class="fa fa-behance"></a></li>
-                        </ul>
+                    <div class="col-xs-12 col-md-12">
+                        <p>&copy; 2016 Blog Design, All Rights Reserved, Made with <i class="fa fa-wrench"></i> by Pizza Han</p>
                     </div>
                 </div>
             </div>
