--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@
                             <p><strong>Pizza Hân</strong></p>
                             
                             <p>Di động: <strong>096 900 24 31</strong></p>
-                            <p>Email: <strong>dinhvanhan123@gmail.com</strong> hoặc <strong>dinhvanhan.designer.ohm@gmail.com</strong>  </p>
+                            <p>Email: <strong>dinhvanhan123@gmail.com</strong> hoặc <strong>dinhvanhan.designer.ohg@gmail.com</strong>  </p>
                         </article>
                     </div>
                 </div>
