--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
 
                             <p>- Một chút tiểu sử bản thân mình bạn nào có đọc thì cũng đừng cười nhé hè hè... Văn vẻ của mình cũng hơi kém ah :))</p>
 
-                            <p>- Mình thì cũng đi làm được gần 2 năm rồi hè từ ngày ra trường tới giờ cũng rất may là không bị thất nghiệp kể ra thì số mình cũng đỏ kiểu có vài người bảo mình là có quý nhân phù trợ mình cũng cảm thấy thế thật hề hề... </p>
+                            <p>- Mình thì cũng đi làm được hơn 2 năm rồi hè từ ngày ra trường tới giờ cũng rất may là không bị thất nghiệp kể ra thì số mình cũng đỏ kiểu có vài người bảo mình là có quý nhân phù trợ mình cũng cảm thấy thế thật hề hề... </p>
                             <p>- Sau khi ra trường thì mình cũng có tu luyện thêm ba tháng may mắn thì cũng kiếm được việc làm luôn cũng là nhờ anh trai họ mình chỉ dậy ah hè hè ngày đầu chọn nghề học thì anh mình cũng là người hướng nghiệp mình vào học ngành thiết thế đồ họa lúc đấy thì mình cũng học thôi cũng chả có đam mê hay gì gì cả sinh viên thì các bạn biết rồi đấy có ma nào học hành đâu đa số là thế và không ngoại trừ mình hè hè... chỉ mải chơi chả học hành gì học lại thì cứ rập rập
                             mình cũng chẳng thế ngờ được là thế ** nào mình lại xin được việc :(( kiểu như cái số ý hề hề... <br>
                             - Sau này lúc kiếm được việc mới ngẫm các bạn ah thấy chán lắm đi làm chả biết cái gì không biết cái gì luôn lúc đó mới lai ra học rồi ngẫm thấy phí quãng thời gian đại học vô cùng ah hic... chỉ ước được quay lại để giờ không phải ngu ngơ như thế này.<br>
@@ -126,7 +126,7 @@
 
                             <h4 style="margin-top: 30px;">&#9679; Những thứ mà mình có thể làm được :))</h4>
 
-                            <p>- Phát triển web : HTML/CSS, UX/UI, Content development</p>
+                            <p>- Phát triển web : HTML/CSS, UX/UI, Content development, Email Marketing, Ads Design</p>
                             <p>- Xây dựng thương hiệu: Logo, Name Card, Catalog, Brochure...</p>
                             <P>- Công cụ mà mình biết sài: Icomom, Sublime Text, Eclipse, Bootstrap, Photoshop, Illustrator, Git Hub...</P>
 
