--- a/page2.html
+++ b/page2.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Blog Design by Pizza Han</title>
-        <meta name="">
-        <meta name="description" content="Blog chia sẻ kiến thức, kinh nghiệm trong thiết kế.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="PizaHan">
-        <meta name="image" content="http://lh3.googleusercontent.com/CzCeP4mozU__TLZTayC6bF_0icD05rIikX7UXoUuiNWHmj3H1eO-OgdvV3MDoi4gOupw-8K_E9RwWNc30bG-kCLniXk=s1200"/>
+        <meta property="og:url"                content="http://pizzahan.top/" />
+        <meta property="og:type"               content="article" />
+        <meta property="og:title"              content="Blog Design by Pizza Han" />
+        <meta property="og:description"        content="Blog chia sẻ kiến thức, kinh nghiệm trong thiết kế." />
+        <meta property="og:image"              content="http://lh3.googleusercontent.com/CzCeP4mozU__TLZTayC6bF_0icD05rIikX7UXoUuiNWHmj3H1eO-OgdvV3MDoi4gOupw-8K_E9RwWNc30bG-kCLniXk=s1200"/>
 
         <!-- FONTS -->
         <link rel="stylesheet" href="css/font-awesome.min.css">
