--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
         <meta property="og:type"               content="article" />
         <meta property="og:title"              content="Blog Design by Pizza Han" />
         <meta property="og:description"        content="Blog chia sẻ kiến thức, kinh nghiệm trong thiết kế." />
-        <meta property="og:image"              content="http://lh3.googleusercontent.com/CzCeP4mozU__TLZTayC6bF_0icD05rIikX7UXoUuiNWHmj3H1eO-OgdvV3MDoi4gOupw-8K_E9RwWNc30bG-kCLniXk=s1200"/>
+        <meta property="og:image"              content="https://lh3.googleusercontent.com/-h_aoAyflfvA/V_9GATHWwnI/AAAAAAAAPa0/mXrrgboy6MAdKxK3lsexchFO9swcFxz2gCL0B/w1200-h630/111111.png"/>
 
         <!-- FONTS -->
         <link rel="stylesheet" href="css/font-awesome.min.css">
