--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,8 @@
         <meta property="og:url"                content="http://pizzahan.top/" />
         <meta property="og:type"               content="article" />
         <meta property="og:title"              content="Blog Design by Pizza Han" />
-        <meta property="og:description"        content="Blog chia sẻ kiến thức, kinh nghiệm trong thiết kế." />
+        <meta property="og:description"        content="Blog chia sẻ kiến thức, kinh nghiệm trong thiết kế. 
+        <br> - Here is a blog site to share knowledge about designs.﻿" />
         <meta property="og:image"              content="https://lh3.googleusercontent.com/-h_aoAyflfvA/V_9GATHWwnI/AAAAAAAAPa0/mXrrgboy6MAdKxK3lsexchFO9swcFxz2gCL0B/w1200-h630/111111.png"/>
 
         <!-- FONTS -->
