--- a/10-dieu-cac-agency-thiet-ke-va-design-nen-tu-hoi-khi-quang-cao-ban-than.html
+++ b/10-dieu-cac-agency-thiet-ke-va-design-nen-tu-hoi-khi-quang-cao-ban-than.html
@@ -105,7 +105,7 @@
 
                             <p><em>Các agency thiết kế và designers cần lưu ý những điều gì khi “quảng cáo” bản thân nào?&nbsp;</em></p>
                             <p><em>Cùng mình tham khảo một số điều cần thiết từ Infographic dưới đây các bạn nhé!&nbsp;</em></p>
-                            <h6><img src="img/Knowledge/10-dieu-cac-agency-thiet-ke-va-designers-nen-tu-hoi-khi-promote-ban-than1.png"><img class="alignnone size-full wp-image-40496" width="1194" height="5716"></h6>
+                            <h6><img src="img/Knowledge/10-dieu-cac-agency-thiet-ke-va-designers-nen-tu-hoi-khi-promote-ban-than1.jpg"><img class="alignnone size-full wp-image-40496" width="1194" height="5716"></h6>
  
 
 
